<resources>
    <string name="app_name">会议席位端</string>
    <string name="database_dev">会议数据库</string>
    <string name="tea_dev">会议茶水设备</string>
    <string name="pro_dev">会议投影设备</string>
    <string name="capture_dev">会议流采集设备</string>
    <string name="client_dev">会议终端设备</string>
    <string name="video_chat_dev">视频对讲客户端</string>
    <string name="release_dev">会议发布设备</string>
    <string name="screen_dev">一键同屏设备</string>
    <string name="face_main">主界面</string>
    <string name="face_meet">会议界面</string>
    <string name="face_back">后台界面</string>
    <string name="face_vote">投票界面</string>
    <string name="member_role_ordinary">普通参会人</string>
    <string name="member_role_host">主持人</string>
    <string name="member_role_secretary">秘书</string>
    <string name="member_role_admin">管理员</string>
    <string name="none">无</string>
    <string name="vote_type_4_5">5选4</string>
    <string name="vote_type_3_5">5选3</string>
    <string name="vote_type_2_5">5选2</string>
    <string name="vote_type_2_3">3选2</string>
    <string name="vote_type_single">单选</string>
    <string name="vote_type_multi">多选</string>
    <string name="anonymous">匿名</string>
    <string name="notation">记名</string>
    <string name="vote_state_not_initiated">未发起</string>
    <string name="vote_state_ongoing">正在进行</string>
    <string name="vote_state_has_ended">已经结束</string>
    <string name="file_downloading">文件下载中</string>
    <string name="error_0">平台初始化成功</string>
    <string name="error_1">过期了</string>
    <string name="error_2">程序出错</string>
    <string name="error_3">不允许接入的企业</string>
    <string name="error_4">没有多余的设备ID了</string>
    <string name="error_5">不允许接入的设备</string>
    <string name="error_6">文件数据错误</string>
    <string name="error_7">非法的设备</string>
    <string name="error_8">设备ID已经被使用了</string>
    <string name="error_9">不存在的需要的资源</string>
    <string name="error_10">文件数据错误,但可以解析出原设备ID</string>
    <string name="error_11">指定设备与设备类型不匹配</string>
    <string name="seat_">席位：</string>
    <string name="enterMeeting">进入会议</string>
    <string name="note_info_">备注信息：%1$s</string>
    <string name="upload_completed">%1$s上传完毕</string>
    <string name="no_wps_software_found">请先安装WPS软件</string>
    <string name="file_downloaded_percent">%1$s已下载%2$s</string>
    <string name="set_name_">席位：%1$s</string>
    <string name="unit_name_">单位：%1$s</string>
    <string name="job_name_">职位：%1$s</string>
    <string name="state_meet_not">未开始会议</string>
    <string name="state_meet_start">已开始会议</string>
    <string name="state_meet_end">已结束会议</string>
    <string name="version_">版本：%1$s</string>
    <string name="please_join_meeting_first">请先加入会议</string>
    <string name="please_bind_member_first">请先绑定参会人</string>
    <string name="bind_member">绑定参会人</string>
    <string name="ensure">确定</string>
    <string name="cancel">取消</string>
    <string name="create">创建</string>
    <string name="please_choose_member">请选择参会人</string>
    <string name="create_member">创建参会人</string>
    <string name="company">公司</string>
    <string name="name">名称</string>
    <string name="required_field">必填项</string>
    <string name="position">职位</string>
    <string name="phone">电话</string>
    <string name="email">邮箱</string>
    <string name="password">密码</string>
    <string name="note">备注</string>
    <string name="please_enter_member_name">请输入参会人名称</string>
    <string name="login_name">登录名称</string>
    <string name="welcome_login">欢迎登录</string>
    <string name="login_password">登录密码</string>
    <string name="login">登录</string>
    <string name="manage_mode">管理模式</string>
    <string name="offline_mode">离线模式</string>
    <string name="remember_password">记住密码</string>
    <string name="system_settings">系统设置</string>
    <string name="please_login_to">请登录...</string>
    <string name="please_enter_name_and_password">请输入账号和密码</string>
    <string name="user_">用户：%1$s</string>
    <string name="no_select_meet">未选择会议！</string>
    <string name="meet_status_no_select_meet">会议状态：未选择会议！</string>
    <string name="meet_status_not_initiated">会议状态：未开始会议</string>
    <string name="meet_status_ongoing">会议状态：正在进行</string>
    <string name="meet_status_isover">会议状态：已经结束</string>
    <string name="online">在线</string>
    <string name="offline">离线</string>
    <string name="file_name">文件名</string>
    <string name="file_size">文件大小</string>
    <string name="type">类型</string>
    <string name="upload_people">上传者</string>
    <string name="operate">操作</string>
    <string name="download">下载</string>
    <string name="delete">删除</string>
    <string name="please_choose_file_first">请先选择文件</string>
    <string name="open_view">查看</string>
    <string name="documentation">文档</string>
    <string name="picture">图片</string>
    <string name="video">视频</string>
    <string name="other">其它</string>
    <string name="currently_downloading">正在下载中...</string>
    <string name="number">序号</string>
    <string name="sign_in_time">签到时间</string>
    <string name="sign_in_state">签到状态</string>
    <string name="sign_in_type">签到方式</string>
    <string name="delete_signIn_record">删除签到记录</string>
    <string name="export_pdf">PDF导出</string>
    <string name="personal_password_signin">个人密码签到</string>
    <string name="meeting_password_signin">会议密码签到</string>
    <string name="meeting_password_and_handwriting_signin">会议密码和手写签到</string>
    <string name="personal_password_and_handwriting_signin">个人密码和手写签到</string>
    <string name="handwriting_signin">手写签到</string>
    <string name="password_signin">密码签到</string>
    <string name="direct_signin">直接签到</string>
    <string name="export_pdf_successful">导出成PDF文件成功</string>
    <string name="yd_">应到：%1$s</string>
    <string name="yqd_">已签到：%1$s</string>
    <string name="wqd_">未签到：%1$s</string>
    <string name="state_not_initiated">未发起</string>
    <string name="state_ongoing">正在进行</string>
    <string name="state_has_ended">已经结束</string>
    <string name="type_single">单选</string>
    <string name="type_4_5">5选4</string>
    <string name="type_3_5">5选3</string>
    <string name="type_2_5">5选2</string>
    <string name="type_2_3">3选2</string>
    <string name="mode_register">记名</string>
    <string name="mode_anonymous">匿名</string>
    <string name="see_chart">查看图表</string>
    <string name="see_details">查看详情</string>
    <string name="type_multi">多选</string>
    <string name="please_choose_vote">请先选择投票</string>
    <string name="can_not_choose_notvote">不能查看未发起的投票</string>
    <string name="please_choose_registered_vote">请选择记名的投票</string>
    <string name="submit_name">姓名</string>
    <string name="choose_answer">选择的项</string>
    <string name="please_choose_source">请选择屏幕源</string>
    <string name="please_choose_screen_target">请选择要同屏的目标</string>
    <string name="please_choose_stop_target">请选择要停止的目标</string>
    <string name="back">返回</string>
    <string name="export_result">导出结果</string>
    <string name="export_successful">导出成功</string>
    <string name="vote_count">%1$s %2$s票</string>
    <string name="null_str">无数据</string>
    <string name="archive_options">归档选项</string>
    <string name="meeting_info">会议基本信息</string>
    <string name="member_info">参会人员信息</string>
    <string name="signin_info">会议签到信息</string>
    <string name="meeting_vote_info">会议投票信息</string>
    <string name="meeting_share_file">会议共享文件</string>
    <string name="annotation_file">会议批注文件</string>
    <string name="meeting_data">会议资料</string>
    <string name="check_all">全选</string>
    <string name="operate_info">操作信息</string>
    <string name="operate_state">操作状态</string>
    <string name="encryption">加密</string>
    <string name="start_archive">开始归档</string>
    <string name="cancel_archive">取消归档</string>
    <string name="please_wait_archive_complete_first">请先等待归档完成再操作</string>
    <string name="device_id">设备ID</string>
    <string name="device_name">设备名称</string>
    <string name="device_type">设备类型</string>
    <string name="out_open">外部打开文档</string>
    <string name="device_IP">设备IP</string>
    <string name="device_state">设备状态</string>
    <string name="member">参会人</string>
    <string name="interface_state">界面状态</string>
    <string name="lift">升降机</string>
    <string name="mike">话筒</string>
    <string name="app_restart">软件重启</string>
    <string name="terminal_restart">终端重启</string>
    <string name="terminal_shutdown">终端关机</string>
    <string name="secondary_signin">辅助签到</string>
    <string name="rise">上升</string>
    <string name="stop">停止</string>
    <string name="decline">下降</string>
    <string name="role">角色</string>
    <string name="wake_on_lan">网络唤醒</string>
    <string name="open_document_externally">外部打开文档</string>
    <string name="modify_member_role">修改参会人角色</string>
    <string name="confirm_modify">确认修改</string>
    <string name="member_name">参会人名称</string>
    <string name="seat">席位</string>
    <string name="please_choose_bind_member">请选择已绑定设备的参会人</string>
    <string name="please_choose_device_first">请先选择设备</string>
    <string name="please_choose_lift_or_mike">请选择升降机或麦克风</string>
    <string name="not_bind_dev">未绑定席位</string>
    <string name="not_on_meet">未进入会议</string>
    <string name="no_permission">无权限</string>
    <string name="can_not_vote">参会人无法参与投票</string>
    <string name="launch_vote">发起投票</string>
    <string name="stop_vote">结束投票</string>
    <string name="choose_vote_member">选择投票人员</string>
    <string name="vote_tip">参会人离线、未绑定席位或未进入会议，将无法选中参与投票</string>
    <string name="permission">权限</string>
    <string name="vote_changed">选中的投票已改变，请重新选择</string>
    <string name="launch_election">发起选举</string>
    <string name="stop_election">结束选举</string>
    <string name="please_choose_not_vote">请选择未发起的投票</string>
    <string name="please_stop_vote_first">请先停止正在进行的投票</string>
    <string name="only_stop_voteing">请选择正在进行的投票</string>
    <string name="send">发送</string>
    <string name="time">%1$s【 %2$s 】</string>
    <string name="me_time">我【 %1$s 】</string>
    <string name="choose_member_first">请先选择参会人</string>
    <string name="please_enter_content_first">请先输入内容</string>
    <string name="exceed_max_words">一次最多发送300字的信息</string>
    <string name="watch_video">观看视屏</string>
    <string name="stop_watch">停止观看</string>
    <string name="screen_video">同屏视频</string>
    <string name="End_screen">结束同屏</string>
    <string name="pro_video">投影视屏</string>
    <string name="End_projection">结束投影</string>
    <string name="please_choose_view">请选择预览窗口</string>
    <string name="please_choose_video_show">请选择要播放的视频节目</string>
    <string name="please_choose_stop_view">请选择要停止的窗口</string>
    <string name="mandatory">强制</string>
    <string name="full_screen">全屏输出</string>
    <string name="flow_1">1号输出</string>
    <string name="flow_2">2号输出</string>
    <string name="flow_3">3号输出</string>
    <string name="flow_4">4号输出</string>
    <string name="launch_pro">发起投影</string>
    <string name="stop_pro">结束投影</string>
    <string name="launch_pro_title"><![CDATA[选择投影机<发起投影>]]></string>
    <string name="modify">修改</string>
    <string name="export_excel">导出到Excel</string>
    <string name="import_excel">从Excel导入</string>
    <string name="add">添加</string>
    <string name="option1_">选项一：</string>
    <string name="option2_">选项二：</string>
    <string name="option3_">选项三：</string>
    <string name="option4_">选项四：</string>
    <string name="option5_">选项五：</string>
    <string name="vote_manage_title"><![CDATA[投票信息录入，可对投票内容投<赞成><反对><弃权>票]]></string>
    <string name="title">标题</string>
    <string name="face_state">界面状态</string>
    <string name="video_manage">视频管理</string>
    <string name="video_stream">视频流</string>
    <string name="vote_content_">投票内容：</string>
    <string name="countdown_">倒计时：</string>
    <string name="register_">记名：</string>
    <string name="election_type_">选举类型：</string>
    <string name="please_enter_title">请输入标题</string>
    <string name="please_enter_content">请输入内容</string>
    <string name="enable_recording">启用录制</string>
</resources>