<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_5"
        android:layout_marginEnd="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_5"
        android:gravity="center">

        <CheckBox
            android:id="@+id/cb_mandatory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mandatory" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/launch_pro_title"
            android:textColor="@color/black"/>

        <CheckBox
            android:id="@+id/cb_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/check_all" />
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_projector"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"
        android:layout_weight="1"
        android:background="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_5"
        android:layout_marginEnd="@dimen/dp_20"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cb_full"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/full_screen" />

        <CheckBox
            android:id="@+id/cb_flow_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/flow_1" />

        <CheckBox
            android:id="@+id/cb_flow_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/flow_2" />

        <CheckBox
            android:id="@+id/cb_flow_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/flow_3" />

        <CheckBox
            android:id="@+id/cb_flow_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/flow_4" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_10"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_launch_pro"
            style="@style/btn_pressed_style"
            android:layout_width="@dimen/dp_150"
            android:layout_height="@dimen/dp_30"
            android:layout_marginEnd="@dimen/dp_30"
            android:text="@string/launch_pro" />

        <Button
            android:id="@+id/btn_cancel"
            style="@style/btn_pressed_style"
            android:layout_width="@dimen/dp_150"
            android:layout_height="@dimen/dp_30"
            android:layout_marginStart="@dimen/dp_30"
            android:text="@string/cancel" />
    </LinearLayout>
</LinearLayout>