<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/item_root_view"
    android:layout_width="match_parent"
    android:layout_height="30dp"
    android:gravity="center"
    android:orientation="horizontal">

    <CheckBox
        android:id="@+id/item_view_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:clickable="false"
        android:ellipsize="end"
        android:lines="1"
        android:singleLine="true"
        android:text="@string/number" />

    <TextView
        android:id="@+id/item_view_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        android:ellipsize="end"
        android:lines="1"
        android:singleLine="true"
        android:text="@string/member" />

    <TextView
        android:id="@+id/item_view_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="2"
        android:ellipsize="end"
        android:lines="1"
        android:singleLine="true"
        android:text="@string/name" />

    <TextView
        android:id="@+id/item_view_4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        android:ellipsize="end"
        android:lines="1"
        android:singleLine="true"
        android:text="@string/device_state" />

    <TextView
        android:id="@+id/item_view_5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:ellipsize="end"
        android:gravity="center"
        android:lines="1"
        android:singleLine="true"
        android:text="@string/face_state" />

    <TextView
        android:id="@+id/item_view_6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:ellipsize="end"
        android:gravity="center"
        android:lines="1"
        android:singleLine="true"
        android:text="@string/out_open"
        android:textSize="@dimen/text_size_level2" />

    <TextView
        android:id="@+id/item_view_7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="2"
        android:ellipsize="end"
        android:lines="1"
        android:singleLine="true"
        android:text="@string/device_type" />

</LinearLayout>