<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical"
    android:padding="@dimen/dp_20">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_5"
        android:text="@string/vote_manage_title"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_vote"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vote_content_"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/edt_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/editbox_background_normal"
            android:lines="1"
            android:singleLine="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_5"
            android:text="@string/countdown_" />

        <Spinner
            android:id="@+id/sp_countdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_10"
            android:entries="@array/countdown_spinner" />
        <TextView
            android:id="@+id/tv_type"
            android:layout_width="wrap_content"
            android:text="@string/election_type_"
            android:layout_height="wrap_content"/>
        <Spinner
            android:id="@+id/sp_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_10"
            android:entries="@array/type_spinner" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_" />

        <Spinner
            android:id="@+id/sp_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_10"
            android:entries="@array/confidential_spinner" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option1_" />

        <EditText
            android:id="@+id/edt_option1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/editbox_background_normal"
            android:lines="1"
            android:singleLine="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option2_" />

        <EditText
            android:id="@+id/edt_option2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/editbox_background_normal"
            android:lines="1"
            android:singleLine="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option3_" />

        <EditText
            android:id="@+id/edt_option3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/editbox_background_normal"
            android:lines="1"
            android:singleLine="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option4_" />

        <EditText
            android:id="@+id/edt_option4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/editbox_background_normal"
            android:lines="1"
            android:singleLine="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option5_" />

        <EditText
            android:id="@+id/edt_option5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/editbox_background_normal"
            android:lines="1"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_10"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_add"
            style="@style/btn_gray_blue_pressed_style"
            android:layout_width="0dp"
            android:layout_marginEnd="@dimen/dp_5"
            android:layout_weight="1"
            android:text="@string/add" />

        <Button
            android:id="@+id/btn_modify"
            style="@style/btn_gray_blue_pressed_style"
            android:layout_width="0dp"
            android:layout_marginEnd="@dimen/dp_5"
            android:layout_weight="1"
            android:text="@string/modify" />

        <Button
            android:id="@+id/btn_delete"
            style="@style/btn_gray_blue_pressed_style"
            android:layout_width="0dp"
            android:layout_marginEnd="@dimen/dp_5"
            android:layout_weight="1"
            android:text="@string/delete" />

        <Button
            android:id="@+id/btn_export_excel"
            style="@style/btn_gray_blue_pressed_style"
            android:layout_width="0dp"
            android:layout_marginEnd="@dimen/dp_5"
            android:layout_weight="1"
            android:text="@string/export_excel" />

        <Button
            android:id="@+id/btn_import_excel"
            style="@style/btn_gray_blue_pressed_style"
            android:layout_width="0dp"
            android:layout_marginEnd="@dimen/dp_5"
            android:layout_weight="1"
            android:text="@string/import_excel" />

        <Button
            android:id="@+id/btn_see_details"
            style="@style/btn_gray_blue_pressed_style"
            android:layout_width="0dp"
            android:layout_marginEnd="@dimen/dp_5"
            android:layout_weight="1"
            android:text="@string/see_details" />

        <Button
            android:id="@+id/btn_see_chart"
            style="@style/btn_gray_blue_pressed_style"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/see_chart" />
    </LinearLayout>
</LinearLayout>