<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:background="@drawable/dialog_bg"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/video_manage"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_level5" />

        <com.xlk.paperlesstl.ui.video.CustomVideoView
            android:id="@+id/custom_video_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/video_stream"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_level5" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_member"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="@color/white" />

        <CheckBox
            android:id="@+id/cb_enable_recording"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enable_recording" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_watch_video"
                style="@style/btn_style_normal"
                android:layout_width="0dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:text="@string/watch_video" />

            <Button
                android:id="@+id/btn_stop_watch"
                style="@style/btn_style_normal"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/stop_watch" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_start_screen"
                style="@style/btn_style_normal"
                android:layout_width="0dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:text="@string/screen_video" />

            <Button
                android:id="@+id/btn_end_screen"
                style="@style/btn_style_normal"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/End_screen" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_start_pro"
                style="@style/btn_style_normal"
                android:layout_width="0dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:text="@string/pro_video" />

            <Button
                android:id="@+id/btn_end_pro"
                style="@style/btn_style_normal"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/End_projection" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>