<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/notice_div_line"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="1px"
            android:layout_marginTop="1px"
            android:layout_marginEnd="1px"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/number" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="1px"
            android:layout_marginEnd="1px"
            android:layout_weight="6"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/title" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/notice_div_line" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_notice"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white" />

    <EditText
        android:id="@+id/edt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/editbox_background_normal"
        android:hint="@string/please_enter_title"
        android:padding="3dp"
        android:textSize="@dimen/text_size_level2" />

    <EditText
        android:id="@+id/edt_content"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/editbox_background_normal"
        android:gravity="top|start"
        android:hint="@string/please_enter_content"
        android:padding="3dp"
        android:textSize="@dimen/text_size_level2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_add"
            style="@style/btn_style_normal"
            android:layout_width="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/add" />

        <Button
            android:id="@+id/btn_modify"
            style="@style/btn_style_normal"
            android:layout_width="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/modify" />

        <Button
            android:id="@+id/btn_delete"
            style="@style/btn_style_normal"
            android:layout_width="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/delete" />
    </LinearLayout>
</LinearLayout>